--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang='pt-br'>
-  <head>
-    <!-- Meta dados da página-->
-    <meta charset='UTF-8'/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Título da sua página </title>
-  </head>
-  <body>
-    <!-- Conteúdo da página -->
-  </body>
-</html>
+<h1> Menu </h1>
+
+<li><a href="/esporte/basquete/"</li>
+<li><a href="/esporte/ciclismo/"</li>
+<li><a href="/esporte/volei/"</li>
