--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1> Menu </h1>
 
-<li><a href="/esporte/basquete/"</li>
-<li><a href="/esporte/ciclismo/"</li>
-<li><a href="/esporte/volei/"</li>
+<li><a href="/esporte/basquete/"/li>
+<li><a href="/esporte/ciclismo/"/li>
+<li><a href="/esporte/volei/"/li>
