--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+
 <h1> Menu </h1>
 
-<li><a href="/esporte/basquete/"/li>
-<li><a href="/esporte/ciclismo/"/li>
-<li><a href="/esporte/volei/"/li>
+<li><a href="/esporte/basquete/index.html"/li>
+<li><a href="/esporte/ciclismo/index.html"/li>
+<li><a href="/esporte/volei/index.html"/li>
+        
+</body>
+</html>
