--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja de Esportes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<h1> Menu </h1>
-
-<li><a href="/esporte/basquete/index.html"/li>
-<li><a href="/esporte/ciclismo/index.html"/li>
-<li><a href="/esporte/volei/index.html"/li>
-        
+    <header>
+        <img src="imgs/logo.png" alt="Loja">
+        <h1>Loja de Esportes</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="basquete/index.html">Basquete</a></li>
+                <li><a href="ciclismo/index.html">Ciclismo</a></li>
+                <li><a href="volei/index.html">Vôlei</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Produtos em Destaque</h2>
+            <div>
+                <a href="basquete/index.html"><img src="imgs/basquete-produto1.jpg" alt="Produto de Basquete"></a>
+                <a href="ciclismo/index.html"><img src="imgs/ciclismo-produto1.jpg" alt="Produto de Ciclismo"></a>
+                <a href="volei/index.html"><img src="imgs/volei-produto1.jpg" alt="Produto de Vôlei"></a>
+            </div>
+        </section>
+        <section>
+            <h2>Sobre a Loja</h2>
+            <p>Oferecemos uma variedade de produtos esportivos para os amantes de esportes.</p>
+            <div id="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d... (adicione o link do mapa aqui)" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <h3>Formas de Pagamento Aceitas:</h3>
+            <ul>
+                <li>Cartão de Crédito</li>
+                <li>Débito</li>
+                <li>Pix</li>
+            </ul>
+            <h3>Proprietários:</h3>
+            <ul>
+                <li>Eduarda Batista Freire</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Loja de Esportes</p>
+    </footer>
 </body>
 </html>
