--- a/esporte/volei/index.html
+++ b/esporte/volei/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
+<html lang='pt-BR'>
   <head>
-    <meta charset='UTF-8'/>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title> Título da sua página </title>
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
-
-    <hu>VOLEI</hu>
-    <hu>O vôlei é um esporte coletivo criado em 1895 por 
+    <header>
+    <h1>VOLEI</h1>
+    <h1>O vôlei é um esporte coletivo criado em 1895 por 
       William G. Morgan, nos Estados Unidos. É jogado entre 
       duas equipes de seis jogadores cada, divididas por uma 
       rede. O objetivo é enviar a bola por cima da rede para 
       o lado adversário e impedir que ela toque o chão em 
-      seu próprio lado.</hu>
+      seu próprio lado.</h1>
 
     <img src='/imgs/logo volei.avif'/>
 
-    <hu>rede
+    <h1>rede
     30cm de comprimento
     alta durabilidade 
-    880 $</hu>
+    880 $</h1>
     <img src='/imgs/rede volei 11.png'/>
 
-    <hu>bola 
+    <h1>bola 
     30x30
     alta durabilidade
-    150 $</hu>
+    150 $</h1>
     <img src='/imgs/bola volei.webp'/>
 
-    <hu>joelheira
+    <h1>joelheira
     tamanho universal
-    material resistente200 $</hu>
+    material resistente200 $</h1>
     <img src='/imgs/joelheira volei.webp'/>
     
     <h2>Sobre a Loja</h2>
