--- a/esporte/volei/index.html
+++ b/esporte/volei/index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
-<html lang='pt-BR'>
-  <head>
+<html lang="pt-BR">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Título da sua página </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vôlei - Loja de Esportes</title>
     <link rel="stylesheet" href="../styles.css">
-  </head>
-  <body>
+</head>
+<body>
     <header>
-    <h1>VOLEI</h1>
-    <h1>O vôlei é um esporte coletivo criado em 1895 por 
-      William G. Morgan, nos Estados Unidos. É jogado entre 
-      duas equipes de seis jogadores cada, divididas por uma 
-      rede. O objetivo é enviar a bola por cima da rede para 
-      o lado adversário e impedir que ela toque o chão em 
-      seu próprio lado.</h1>
-
-    <img src='/imgs/logo volei.avif'/>
-
-    <h1>rede
-    30cm de comprimento
-    alta durabilidade 
-    880 $</h1>
-    <img src='/imgs/rede volei 11.png'/>
-
-    <h1>bola 
-    30x30
-    alta durabilidade
-    150 $</h1>
-    <img src='/imgs/bola volei.webp'/>
-
-    <h1>joelheira
-    tamanho universal
-    material resistente200 $</h1>
-    <img src='/imgs/joelheira volei.webp'/>
-    
-    <h2>Sobre a Loja</h2>
-            <p>Descrição dos serviços e produtos oferecidos.</p>
-            <iframe src="https://www.tdgsports.com.br/pagina/equipamentos-de-volei-tudo-o-que-voce-precisa-para-jogar.html" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <p>Formas de pagamento aceitas: Cartão, Dinheiro, pix.</p>
-            <p>Proprietária: Eduarda Freire.</p>
-
-  </body>
-</html>
+        <img src="../imgs/logo.png" alt="Logo da Loja">
+        <h1>Loja de Esportes</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="../basquete/index.html">Basquete</a></li>
+                <li><a href="../ciclismo/index.html">Ciclismo</a></li>
+                <li><a href="index.html">Vôlei</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Sobre o Vôlei</h2>
+            <p> O vôlei é um esporte coletivo criado em 1895 por William G. Morgan, nos Estados Unidos. É jogado entre duas equipes de seis jogadores cada, divididas por uma rede. O objetivo é enviar a bola por cima da rede para o lado adversário e impedir que ela toque o chão em seu próprio lado.</p>
+            <p>Links adicionais sobre o vôlei:</p>
+            <ul>
+                <li><a href="https://www.fivb.com">FIVB</a></li>
+                <li><a href="https://www.volleywood.net">Volleywood</a></li>
+                <li><a href="https://www.volleyballmag.com">Volleyball Magazine</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Produtos de Vôlei</h2>
+            <article>
+                <img src="../imgs/volei-produto1.jpg" alt="Produto de Vôlei 1">
+                <h3>Bola de Vôlei</h3>
+                <p>Bola oficial para jogos e treinos de vôlei.</p>
+                <p>Preço: R$699,00</p>
+                <p>Tamanhos disponíveis: Único</p>
+            </article>
+            <article>
+                <img src="../imgs/volei-produto2.jpg" alt="Produto de Vôlei 2">
+                <h3>Joelheira de Vôlei</h3>
+                <p>Joelheira com proteção reforçada para maior segurança durante os jogos.</p>
+                <p>Preço: R$60,00</p>
+                <p>Tamanhos
