--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -1,45 +1,68 @@
 <!DOCTYPE html>
-<html lang='pt-br'>
-  <head>
-    <meta charset='UTF-8'/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title> Título da sua página </title>
-  </head>
-  <body>
-    
-    <hu>BASQUETE</hu>
-    <hu>O basquete é conhecido por seu ritmo rápido e dinâmico,
-       exigindo habilidades como dribles, passes e arremessos. 
-       É amplamente praticado em escolas, ligas profissionais 
-       e universitárias ao redor do mundo, com a NBA (National 
-       Basketball Association) nos Estados Unidos sendo uma das 
-       ligas mais prestigiadas e seguidas. O esporte promove o 
-       trabalho em equipe, a estratégia e a resistência física.</hu>
-
-    <img src='/imgs/logo basquete.avif'/>
- 
-    <hu>bola
-    25x25
-    muito resistente
-    150 $</hu>
-    <img src='/imgs/bola laranja.jpg'/>
-
-    <hu>tenis
-    36-44
-    longa durabilidade
-    360 $</hu>
-    <img src='/imgs/tenis basq.avif'/>
-
-    <hu>cesta
-    30cm de diametro, 60cm de altura
-    aço inox
-    500 $</hu>
-    <img src='/imgs/sexta feira.webp'/>
-    
-    <h2>Sobre a Loja</h2>
-            <p>Descrição dos serviços e produtos oferecidos.</p>
-            <iframe src="https://brasilescola.uol.com.br/educacao-fisica/basquetebol.htm" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            <p>Formas de pagamento aceitas: Cartão, Dinheiro, pix.</p>
-            <p>Proprietária: Eduarda Freire.</p>
-  </body>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Basquete - Loja de Esportes</title>
+    <link rel="stylesheet" href="../styles.css">
+</head>
+<body>
+    <header>
+        <img src="../imgs/logo.png" alt="Logo da Loja">
+        <h1>Loja de Esportes</h1>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Início</a></li>
+                <li><a href="index.html">Basquete</a></li>
+                <li><a href="../ciclismo/index.html">Ciclismo</a></li>
+                <li><a href="../volei/index.html">Vôlei</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Sobre o Basquete</h2>
+            <p>O basquete é conhecido por seu ritmo rápido e dinâmico,
+              exigindo habilidades como dribles, passes e arremessos. 
+              É amplamente praticado em escolas, ligas profissionais 
+              e universitárias ao redor do mundo, com a NBA (National 
+              Basketball Association) nos Estados Unidos sendo uma das 
+              ligas mais prestigiadas e seguidas. O esporte promove o 
+              trabalho em equipe, a estratégia e a resistência física.</p>
+            <p>Links adicionais sobre o basquete:</p>
+            <ul>
+                <li><a href="https://www.fiba.basketball">FIBA</a></li>
+                <li><a href="https://www.nba.com">NBA</a></li>
+                <li><a href="https://www.basketball-reference.com">Basketball Reference</a></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Produtos de Basquete</h2>
+            <article>
+                <img src="../imgs/basquete-produto1.jpg" alt="Produto de Basquete 1">
+                <h3>Bolsa de Basquete</h3>
+                <p>Bolsa resistente para transporte de bolas de basquete.</p>
+                <p>Preço: R$80,00</p>
+                <p>Tamanhos disponíveis: Único</p>
+            </article>
+            <article>
+                <img src="../imgs/basquete-produto2.jpg" alt="Produto de Basquete 2">
+                <h3>Chuteira de Basquete</h3>
+                <p>Chuteira com ótima aderência para quadras de basquete.</p>
+                <p>Preço: R$250,00</p>
+                <p>Tamanhos disponíveis: 36, 37, 38, 39, 40</p>
+            </article>
+            <article>
+                <img src="../imgs/basquete-produto3.jpg" alt="Produto de Basquete 3">
+                <h3>Uniforme de Basquete</h3>
+                <p>Uniforme completo com camisa e short.</p>
+                <p>Preço: R$150,00</p>
+                <p>Tamanhos disponíveis: P, M, G</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Loja de Esportes</p>
+    </footer>
+</body>
 </html>
