--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="../imgs/logo.png" alt="Logo da Loja">
+        <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
         <h1>Loja de Esportes</h1>
         <nav>
             <ul>
@@ -22,13 +22,7 @@
     <main>
         <section>
             <h2>Sobre o Basquete</h2>
-            <p>O basquete é conhecido por seu ritmo rápido e dinâmico,
-              exigindo habilidades como dribles, passes e arremessos. 
-              É amplamente praticado em escolas, ligas profissionais 
-              e universitárias ao redor do mundo, com a NBA (National 
-              Basketball Association) nos Estados Unidos sendo uma das 
-              ligas mais prestigiadas e seguidas. O esporte promove o 
-              trabalho em equipe, a estratégia e a resistência física.</p>
+            <p>O basquete é um esporte coletivo que envolve duas equipes de cinco jogadores cada. Foi inventado em 1891 por James Naismith e é um dos esportes mais populares e praticados no mundo.</p>
             <p>Links adicionais sobre o basquete:</p>
             <ul>
                 <li><a href="https://www.fiba.basketball">FIBA</a></li>
@@ -39,21 +33,21 @@
         <section>
             <h2>Produtos de Basquete</h2>
             <article>
-                <img src="../imgs/basquete-produto1.jpg" alt="Produto de Basquete 1">
+                <img src="../imgs/basquete-produto1.jpg" alt="Produto de Basquete 1" width="150">
                 <h3>Bolsa de Basquete</h3>
                 <p>Bolsa resistente para transporte de bolas de basquete.</p>
                 <p>Preço: R$80,00</p>
                 <p>Tamanhos disponíveis: Único</p>
             </article>
             <article>
-                <img src="../imgs/basquete-produto2.jpg" alt="Produto de Basquete 2">
+                <img src="../imgs/basquete-produto2.jpg" alt="Produto de Basquete 2" width="150">
                 <h3>Chuteira de Basquete</h3>
                 <p>Chuteira com ótima aderência para quadras de basquete.</p>
                 <p>Preço: R$250,00</p>
                 <p>Tamanhos disponíveis: 36, 37, 38, 39, 40</p>
             </article>
             <article>
-                <img src="../imgs/basquete-produto3.jpg" alt="Produto de Basquete 3">
+                <img src="../imgs/basquete-produto3.jpg" alt="Produto de Basquete 3" width="150">
                 <h3>Uniforme de Basquete</h3>
                 <p>Uniforme completo com camisa e short.</p>
                 <p>Preço: R$150,00</p>
