--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -3,60 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basquete - Loja de Esportes</title>
-    <link rel="stylesheet" href="../styles.css">
+    <title>Fishing Store - Basquete</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
-        <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
-        <h1>Loja de Esportes</h1>
+        <img src="../imgs/logo.png" alt="Logo da Fishing Store" id="logo">
+        <h1>Fishing Store</h1>
         <nav>
             <ul>
-                <li><a href="../index.html">Início</a></li>
-                <li><a href="index.html">Basquete</a></li>
-                <li><a href="../ciclismo/index.html">Ciclismo</a></li>
+                <li><a href="../index.html">Home</a></li>
                 <li><a href="../volei/index.html">Vôlei</a></li>
+                <li><a href="../basquete/index.html">Basquete</a></li>
+                <li><a href="../tenis/index.html">Tênis</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section>
+        <section id="info-esporte">
             <h2>Sobre o Basquete</h2>
-            <p>O basquete é um esporte coletivo que envolve duas equipes de cinco jogadores cada. Foi inventado em 1891 por James Naismith e é um dos esportes mais populares e praticados no mundo.</p>
-            <p>Links adicionais sobre o basquete:</p>
-            <ul>
-                <li><a href="https://www.fiba.basketball">FIBA</a></li>
-                <li><a href="https://www.nba.com">NBA</a></li>
-                <li><a href="https://www.basketball-reference.com">Basketball Reference</a></li>
-            </ul>
+            <p>O basquete é um esporte de equipe, jogado em uma quadra retangular, onde o objetivo é marcar pontos arremessando a bola na cesta adversária.</p>
+            <p>Atletas famosos: Michael Jordan, LeBron James, Oscar Schmidt.</p>
+            <p>Campeonatos: NBA, Campeonato Mundial de Basquetebol FIBA.</p>
+            <a href="https://pt.wikipedia.org/wiki/Basquetebol">Mais informações sobre o Basquete</a>
         </section>
-        <section>
-            <h2>Produtos de Basquete</h2>
+
+        <section id="produtos-esporte">
+            <h2>Produtos Disponíveis</h2>
             <article>
-                <img src="../imgs/basquete-produto1.jpg" alt="Produto de Basquete 1" width="150">
-                <h3>Bolsa de Basquete</h3>
-                <p>Bolsa resistente para transporte de bolas de basquete.</p>
-                <p>Preço: R$80,00</p>
-                <p>Tamanhos disponíveis: Único</p>
+                <h3>Bola de Basquete</h3>
+                <img src="../imgs/basquete-produto1.jpg" alt="Bola de Basquete">
+                <p>Preço: R$ 120,00</p>
+                <p>Descrição: Bola oficial para jogos profissionais.</p>
+                <p>Tamanhos: Único</p>
             </article>
             <article>
-                <img src="../imgs/basquete-produto2.jpg" alt="Produto de Basquete 2" width="150">
-                <h3>Chuteira de Basquete</h3>
-                <p>Chuteira com ótima aderência para quadras de basquete.</p>
-                <p>Preço: R$250,00</p>
-                <p>Tamanhos disponíveis: 36, 37, 38, 39, 40</p>
+                <h3>Camiseta de Basquete</h3>
+                <img src="../imgs/basquete-produto2.jpg" alt="Camiseta de Basquete">
+                <p>Preço: R$ 80,00</p>
+                <p>Descrição: Camiseta leve e confortável para treinos.</p>
+                <p>Tamanhos: P, M, G, GG</p>
             </article>
             <article>
-                <img src="../imgs/basquete-produto3.jpg" alt="Produto de Basquete 3" width="150">
-                <h3>Uniforme de Basquete</h3>
-                <p>Uniforme completo com camisa e short.</p>
-                <p>Preço: R$150,00</p>
-                <p>Tamanhos disponíveis: P, M, G</p>
+                <h3>Tênis de Basquete</h3>
+                <img src="../imgs/basquete-produto3.jpg" alt="Tênis de Basquete">
+                <p>Preço: R$ 300,00</p>
+                <p>Descrição: Tênis com excelente amortecimento e aderência.</p>
+                <p>Tamanhos: 38, 40, 42, 44</p>
             </article>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Loja de Esportes</p>
+        <p>&copy; 2024 Fishing Store. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
