--- a/basquete/index.html
+++ b/basquete/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="../imgs/logo.png" alt="Logo da Fishing Store" id="logo">
+        <img src="../imgs/logo basquete.avif" alt="Logo" id="logo">
         <h1>Fishing Store</h1>
         <nav>
             <ul>
@@ -32,7 +32,7 @@
             <h2>Produtos Disponíveis</h2>
             <article>
                 <h3>Bola de Basquete</h3>
-                <img src="../imgs/basquete-produto1.jpg" alt="Bola de Basquete">
+                <img src="../imgs/bola laranja.jpg" alt="Bola de Basquete">
                 <p>Preço: R$ 120,00</p>
                 <p>Descrição: Bola oficial para jogos profissionais.</p>
                 <p>Tamanhos: Único</p>
@@ -46,7 +46,7 @@
             </article>
             <article>
                 <h3>Tênis de Basquete</h3>
-                <img src="../imgs/basquete-produto3.jpg" alt="Tênis de Basquete">
+                <img src="../imgs/tenis basq.avif" alt="Tênis de Basquete">
                 <p>Preço: R$ 300,00</p>
                 <p>Descrição: Tênis com excelente amortecimento e aderência.</p>
                 <p>Tamanhos: 38, 40, 42, 44</p>
