--- a/basquete/index.html
+++ b/basquete/index.html
@@ -38,11 +38,11 @@
                 <p>Tamanhos: Único</p>
             </article>
             <article>
-                <h3>Camiseta de Basquete</h3>
-                <img src="../imgs/basquete-produto2.jpg" alt="Camiseta de Basquete">
-                <p>Preço: R$ 80,00</p>
-                <p>Descrição: Camiseta leve e confortável para treinos.</p>
-                <p>Tamanhos: P, M, G, GG</p>
+                <h3>Sexta de Basquete</h3>
+                <img src="../imgs/sexta feira.webp" alt="Camiseta de Basquete">
+                <p>Preço: R$ 120,00</p>
+                <p>Descrição: Sexta leve e resistente</p>
+                <p>Tamanhos: Unico</p>
             </article>
             <article>
                 <h3>Tênis de Basquete</h3>
