--- a/volei/index.html
+++ b/volei/index.html
@@ -31,24 +31,24 @@
         <section id="produtos-esporte">
             <h2>Produtos Disponíveis</h2>
             <article>
-                <h3>Bola de Vôlei</h3>
-                <img src="../imgs/volei-produto1.jpg" alt="Bola de Vôlei">
+                <h3>Bola Vôlei</h3>
+                <img src="../imgs/bola volei.webp" alt="Bola Vôlei">
                 <p>Preço: R$ 100,00</p>
-                <p>Descrição: Bola oficial para jogos profissionais.</p>
+                <p>Descrição: Bola Simples de vôlei para uso casual.</p>
                 <p>Tamanhos: Único</p>
             </article>
             <article>
-                <h3>Rede de Vôlei</h3>
-                <img src="../imgs/volei-produto2.jpg" alt="Rede de Vôlei">
+                <h3>Rede Vôlei</h3>
+                <img src="../imgs/rede volei 11.png" alt="Rede Vôlei">
                 <p>Preço: R$ 150,00</p>
-                <p>Descrição: Rede de alta durabilidade para jogos.</p>
+                <p>Descrição: Rede de vôlei alta e com uma boa durabilidade.</p>
                 <p>Tamanhos: Padrão</p>
             </article>
             <article>
-                <h3>Uniforme de Vôlei</h3>
-                <img src="../imgs/volei-produto3.jpg" alt="Uniforme de Vôlei">
-                <p>Preço: R$ 200,00</p>
-                <p>Descrição: Uniforme completo para equipes.</p>
+                <h3>Joelheira Vôlei</h3>
+                <img src="../imgs/joelheira volei.webp" alt="Uniforme de Vôlei">
+                <p>Preço: R$ 60,00</p>
+                <p>Descrição: Joelheira de vôlei, otima mobilidade e proteção.</p>
                 <p>Tamanhos: P, M, G</p>
             </article>
         </section>
