--- a/volei/index.html
+++ b/volei/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fishing Store - Vôlei</title>
+    <title>Loja da Duda - Vôlei</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <header>
         <img src="../imgs/logo.png" alt="Logo da Fishing Store" id="logo">
-        <h1>Fishing Store</h1>
+        <h1>Loja da Duda</h1>
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
@@ -54,7 +54,6 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Fishing Store. Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
