--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <section>
             <h2>Produtos em Destaque</h2>
             <div>
-                <a href="basquete/index.html"><img src="imgs/basquete-produto1.jpg" alt="Produto de Basquete"></a>
+                <a href="basquete/index.html"><img src="imgs/bola laranja.jpg" alt="Produto de Basquete"></a>
                 <a href="ciclismo/index.html"><img src="imgs/ciclismo-produto1.jpg" alt="Produto de Ciclismo"></a>
-                <a href="volei/index.html"><img src="imgs/volei-produto1.jpg" alt="Produto de Vôlei"></a>
+                <a href="volei/index.html"><img src="imgs/bola de volei 11." alt="Produto de Vôlei"></a>
             </div>
         </section>
         <section>
-            <h2>Informações sobre a Loja</h2>
-            <p>Oferecemos uma variedade de produtos esportivos para os amantes de esportes.</p>
+            <h2>Informações da Loja</h2>
+            <p>Oferecemos uma variedade de produtos sobre diversas modalidades de esporte para os nossos clientes.</p>
             <div id="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3832.2169677335505!2d-42.313851124309494!3d-16.157757732008527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x74debf0b63fd265%3A0xd64db0172cd62beb!2sIFNMG%20-%20Instituto%20Federal%20do%20Norte%20de%20Minas%20Gerais%2C%20Campus%20Salinas!5e0!3m2!1spt-BR!2sbr!4v1724078574893!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
@@ -47,7 +47,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Loja de Esportes</p>
+        <p>&copy; 2024 Loja da Duda</p>
     </footer>
 </body>
 </html>
