--- a/basquete/index.html
+++ b/basquete/index.html
@@ -22,10 +22,10 @@
     <main>
         <section id="info-esporte">
             <h2>Sobre o Basquete</h2>
-            <p>O basquete é um esporte de equipe, jogado em uma quadra retangular, onde o objetivo é marcar pontos arremessando a bola na cesta adversária.</p>
-            <p>Atletas famosos: Michael Jordan, LeBron James, Oscar Schmidt.</p>
+            <p>O basquete é um esporte de equipe, jogado em uma quadra retangular, onde o objetivo é marcar pontos arremessando a bola na cesta do lado adversario.</p>
+            <p>Atletas Populares: Oscar Schmidt, Michael Jordan, LeBron James</p>
             <p>Campeonatos: NBA, Campeonato Mundial de Basquetebol FIBA.</p>
-            <a href="https://pt.wikipedia.org/wiki/Basquetebol">Mais informações sobre o Basquete</a>
+            
         </section>
 
         <section id="produtos-esporte">
