--- a/volei/index.html
+++ b/volei/index.html
@@ -23,9 +23,9 @@
         <section id="info-esporte">
             <h2>Sobre o Vôlei</h2>
             <p>O vôlei é um esporte praticado em uma quadra dividida por uma rede, com o objetivo de passar a bola por cima da rede para o lado adversário.</p>
-            <p>Atletas famosos: Giba, Ana Moser, Jaqueline Carvalho.</p>
+            <p>Atletas Populares: Giba, Ana Moser, Jaqueline Carvalho.</p>
             <p>Campeonatos: Superliga Brasileira de Voleibol, Campeonato Mundial de Voleibol.</p>
-            <a href="https://pt.wikipedia.org/wiki/Voleibol">Mais informações sobre o Vôlei</a>
+            
         </section>
 
         <section id="produtos-esporte">
