--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div>
                 <a href="basquete/index.html"><img src="imgs/bola laranja.jpg" alt="Produto de Basquete"></a>
                 <a href="ciclismo/index.html"><img src="imgs/bicicleta ciclismo.webp" alt="Produto de Ciclismo"></a>
-                <a href="volei/index.html"><img src="imgs/bola de volei 11." alt="Produto de Vôlei"></a>
+                <a href="volei/index.html"><img src="imgs/bola de volei 11.png" alt="Produto de Vôlei"></a>
             </div>
         </section>
         <section>
